<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_app"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#CCCCCC" />


    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spacer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:letterSpacing="0.05"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/color_app"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="360dp"
        android:layout_height="67dp"
        android:layout_below="@id/textViewAppName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="360dp"
        android:layout_height="67dp"
        android:layout_below="@id/editTextFullName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/hint_signup_id"
        android:inputType="text"
        android:textColor="#000000"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_below="@id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#000000" />




    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color_app"
        android:text="@string/text_sign_up"
        android:textColor="#FFFFFF"
        app:cornerRadius="3dp" />

    <GridLayout
        android:id="@+id/gridLayoutSocialLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/buttonSignUp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:columnCount="3">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_columnWeight="1">

            <ImageButton
                android:id="@+id/btnGoogleSignIn"
                android:layout_width="92dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/login_with_google"
                android:scaleType="fitCenter"
                android:src="@drawable/google"
                android:textColor="#FFFFFF" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <ImageButton
                android:id="@+id/btnFacebookSignIn"
                android:layout_width="92dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/login_with_facebook"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook_icon"
                android:textColor="#FFFFFF" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <ImageButton
                android:id="@+id/btnGitSignIn2"
                android:layout_width="92dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/login_with_git"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/git_logo"
                android:textColor="#FFFFFF" />

        </FrameLayout>

    </GridLayout>

    <Button
        android:id="@+id/buttonSignInPage"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_below="@+id/gridLayoutSocialLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/a_customer_login"
        android:textAlignment="center"
        android:textColor="@color/color_app"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="3dp" />
</RelativeLayout>
